// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches the disabled visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyles": [
      {
        "color": "#bdbdbd",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f0f0f0",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "secondary",
    "contentStyles": [
      {
        "color": "#bdbdbd",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f0f0f0",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "outline",
    "contentStyles": [
      {
        "color": "#bdbdbd",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#e0e0e0",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyles": [
      {
        "color": "#bdbdbd",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;

exports[`Button matches the focused visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyles": [
      {
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#185abd",
      "borderColor": "#ffffff",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "outlineColor": "#000000",
      "outlineOffset": 1,
      "outlineStyle": "solid",
      "outlineWidth": 2,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "secondary",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#fafafa",
      "borderColor": "#ffffff",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "outlineColor": "#000000",
      "outlineOffset": 1,
      "outlineStyle": "solid",
      "outlineWidth": 2,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "outline",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#ffffff",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "outlineColor": "#000000",
      "outlineOffset": 1,
      "outlineStyle": "solid",
      "outlineWidth": 2,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#ffffff",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "outlineColor": "#000000",
      "outlineOffset": 1,
      "outlineStyle": "solid",
      "outlineWidth": 2,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;

exports[`Button matches the hovered visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyles": [
      {
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#1651aa",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "secondary",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f0f0f0",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "outline",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#c7c7c7",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f0f0f0",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;

exports[`Button matches the pressed visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyles": [
      {
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0e336a",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "secondary",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#dbdbdb",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "outline",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#b3b3b3",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#dbdbdb",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;

exports[`Button matches the rest visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyles": [
      {
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#185abd",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "secondary",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#fafafa",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "outline",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#d1d1d1",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "textAlign": "center",
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;

exports[`Button matches the selected visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyles": [
      {
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "600",
        "lineHeight": 20,
        "opacity": 0,
        "textAlign": "center",
      },
      {
        "bottom": 0,
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "600",
        "left": 0,
        "lineHeight": 20,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 0,
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#185abd",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "secondary",
    "contentStyles": [
      {
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "600",
        "lineHeight": 20,
        "opacity": 0,
        "textAlign": "center",
      },
      {
        "bottom": 0,
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "600",
        "left": 0,
        "lineHeight": 20,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 0,
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#616161",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "outline",
    "contentStyles": [
      {
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "600",
        "lineHeight": 20,
        "opacity": 0,
        "textAlign": "center",
      },
      {
        "bottom": 0,
        "color": "#ffffff",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "600",
        "left": 0,
        "lineHeight": 20,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 0,
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#616161",
      "borderColor": "#616161",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyles": [
      {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "600",
        "lineHeight": 20,
        "opacity": 0,
        "textAlign": "center",
      },
      {
        "bottom": 0,
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Helvetica Neue",
        "fontSize": 14,
        "fontWeight": "600",
        "left": 0,
        "lineHeight": 20,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 0,
      },
    ],
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0000001a",
      "borderColor": "#00000000",
      "borderRadius": 12,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;
